# sdl-log-example

./: CMakeLists.txt  README.md  main.c  shell.nix
